# crowdcomms

./: .gitignore  manage.py  pyproject.toml
analytics/: middleware.py  models.py  tests.py  views.py
analytics/migrations/: 0001_initial.py  0002_uservisit_visits.py
bunnies/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
bunnies/migrations/: 0001_initial.py  0002_rabbithole_bunnies_limit.py
crowdcomms_code_test/: settings.py  urls.py  wsgi.py
